added confusion matrix

--- a/notebook_initial_model.ipynb
+++ b/notebook_initial_model.ipynb
@@ -8,12 +8,16 @@
    "source": [
     "# IMPORTS\n",
     "import os\n",
+    "import cv2\n",
     "from PIL import Image\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import tensorflow as tf\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras import layers, models"
+    "from tensorflow.keras import layers, models\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from skimage import morphology, filters, exposure, feature\n",
+    "from scipy import ndimage"
    ]
   },
   {
@@ -55,34 +59,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 126, 126, 32)      896       \n",
+      " conv2d_9 (Conv2D)           (None, 126, 126, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 63, 63, 32)       0         \n",
+      " max_pooling2d_6 (MaxPooling  (None, 63, 63, 32)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 61, 61, 64)        18496     \n",
+      " conv2d_10 (Conv2D)          (None, 61, 61, 64)        18496     \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " max_pooling2d_7 (MaxPooling  (None, 30, 30, 64)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 28, 28, 64)        36928     \n",
+      " conv2d_11 (Conv2D)          (None, 28, 28, 64)        36928     \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 50176)             0         \n",
+      " flatten_3 (Flatten)         (None, 50176)             0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 64)                3211328   \n",
+      " dense_6 (Dense)             (None, 64)                3211328   \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 1)                 65        \n",
+      " dense_7 (Dense)             (None, 1)                 65        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 3,267,713\n",
@@ -90,25 +94,25 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "82/82 [==============================] - 17s 195ms/step - loss: 0.4862 - accuracy: 0.8418 - val_loss: 0.4038 - val_accuracy: 0.8668\n",
+      "82/82 [==============================] - 20s 231ms/step - loss: 0.3942 - accuracy: 0.8338 - val_loss: 0.2729 - val_accuracy: 0.8668\n",
       "Epoch 2/10\n",
-      "82/82 [==============================] - 16s 194ms/step - loss: 0.4478 - accuracy: 0.8418 - val_loss: 0.4036 - val_accuracy: 0.8668\n",
+      "82/82 [==============================] - 18s 216ms/step - loss: 0.2365 - accuracy: 0.8905 - val_loss: 0.1949 - val_accuracy: 0.9112\n",
       "Epoch 3/10\n",
-      "82/82 [==============================] - 16s 195ms/step - loss: 0.4131 - accuracy: 0.8434 - val_loss: 0.3875 - val_accuracy: 0.8668\n",
+      "82/82 [==============================] - 18s 214ms/step - loss: 0.1533 - accuracy: 0.9364 - val_loss: 0.1500 - val_accuracy: 0.9433\n",
       "Epoch 4/10\n",
-      "82/82 [==============================] - 16s 194ms/step - loss: 0.3858 - accuracy: 0.8437 - val_loss: 0.3371 - val_accuracy: 0.8760\n",
+      "82/82 [==============================] - 17s 212ms/step - loss: 0.0960 - accuracy: 0.9625 - val_loss: 0.1478 - val_accuracy: 0.9403\n",
       "Epoch 5/10\n",
-      "82/82 [==============================] - 16s 198ms/step - loss: 0.3400 - accuracy: 0.8579 - val_loss: 0.3469 - val_accuracy: 0.8698\n",
+      "82/82 [==============================] - 15s 182ms/step - loss: 0.0702 - accuracy: 0.9724 - val_loss: 0.1214 - val_accuracy: 0.9571\n",
       "Epoch 6/10\n",
-      "82/82 [==============================] - 17s 204ms/step - loss: 0.3159 - accuracy: 0.8652 - val_loss: 0.3161 - val_accuracy: 0.8806\n",
+      "82/82 [==============================] - 14s 176ms/step - loss: 0.0418 - accuracy: 0.9851 - val_loss: 0.1647 - val_accuracy: 0.9541\n",
       "Epoch 7/10\n",
-      "82/82 [==============================] - 16s 191ms/step - loss: 0.3024 - accuracy: 0.8744 - val_loss: 0.2919 - val_accuracy: 0.8821\n",
+      "82/82 [==============================] - 15s 186ms/step - loss: 0.0410 - accuracy: 0.9847 - val_loss: 0.1477 - val_accuracy: 0.9648\n",
       "Epoch 8/10\n",
-      "82/82 [==============================] - 16s 201ms/step - loss: 0.2765 - accuracy: 0.8797 - val_loss: 0.2576 - val_accuracy: 0.8913\n",
+      "82/82 [==============================] - 15s 179ms/step - loss: 0.0193 - accuracy: 0.9950 - val_loss: 0.1277 - val_accuracy: 0.9663\n",
       "Epoch 9/10\n",
-      "82/82 [==============================] - 16s 196ms/step - loss: 0.2572 - accuracy: 0.8870 - val_loss: 0.2730 - val_accuracy: 0.8913\n",
+      "82/82 [==============================] - 16s 197ms/step - loss: 0.0200 - accuracy: 0.9931 - val_loss: 0.1517 - val_accuracy: 0.9663\n",
       "Epoch 10/10\n",
-      "82/82 [==============================] - 16s 199ms/step - loss: 0.2515 - accuracy: 0.8958 - val_loss: 0.2568 - val_accuracy: 0.8867\n"
+      "82/82 [==============================] - 17s 202ms/step - loss: 0.0093 - accuracy: 0.9981 - val_loss: 0.1509 - val_accuracy: 0.9694\n"
      ]
     }
    ],
@@ -128,7 +132,7 @@
     "    layers.Dense(1, activation='sigmoid') \n",
     "])\n",
     "\n",
-    "# Compile the model\n",
+    "# compile the model\n",
     "model.compile(optimizer='adam',\n",
     "              loss='binary_crossentropy',\n",
     "              metrics=['accuracy'])\n",
@@ -138,26 +142,26 @@
     "# split to test vs train\n",
     "X_train, X_test, y_train, y_test = train_test_split(images, image_labels, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Normalize the images\n",
+    "# normalise the images\n",
     "X_train = X_train / 255.0\n",
     "X_test = X_test / 255.0\n",
     "\n",
-    "# Fit the model\n",
+    "# fit the model\n",
     "history = model.fit(X_train, y_train, epochs=10, validation_data=(X_test, y_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21/21 - 1s - loss: 0.2568 - accuracy: 0.8867 - 602ms/epoch - 29ms/step\n",
-      "Test Loss: 0.2567932605743408\n",
-      "Test Accuracy: 0.8866768479347229\n"
+      "21/21 - 1s - loss: 0.1509 - accuracy: 0.9694 - 1s/epoch - 57ms/step\n",
+      "Test Loss: 0.15085594356060028\n",
+      "Test Accuracy: 0.9693721532821655\n"
      ]
     }
    ],
@@ -170,10 +174,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21/21 [==============================] - 1s 35ms/step\n",
+      "[[488  78]\n",
+      " [  9  78]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate prediction\n",
+    "y_pred = model.predict(X_test)\n",
+    "y_pred = (y_pred > 0.001).astype(int)\n",
+    "\n",
+    "# calculate the confusion matrix\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "\n",
+    "# print\n",
+    "print(cm)\n"
+   ]
   }
  ],
  "metadata": {
