multiclass labels and working code

--- a/notebook_multiclass_model.ipynb
+++ b/notebook_multiclass_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "categories = ['glioma_tumor', 'meningioma_tumor', 'no_tumor', 'pituitary_tumor']\n",
     "\n",
     "# labels\n",
-    "labels = {'glioma_tumor': 0, 'meningioma_tumor': 0, 'no_tumor': 1, 'pituitary_tumor': 0}\n",
+    "labels = {'glioma_tumor': 0, 'meningioma_tumor': 1, 'no_tumor': 2, 'pituitary_tumor': 3}\n",
     "\n",
     "# Lists to store the images and labels\n",
     "images = []\n",
@@ -54,52 +54,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d (Conv2D)             (None, 126, 126, 32)      896       \n",
+      " conv2d_3 (Conv2D)           (None, 126, 126, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d (MaxPooling2D  (None, 63, 63, 32)       0         \n",
-      " )                                                               \n",
-      "                                                                 \n",
-      " conv2d_1 (Conv2D)           (None, 61, 61, 64)        18496     \n",
-      "                                                                 \n",
-      " max_pooling2d_1 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " max_pooling2d_2 (MaxPooling  (None, 63, 63, 32)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_2 (Conv2D)           (None, 28, 28, 64)        36928     \n",
+      " conv2d_4 (Conv2D)           (None, 61, 61, 64)        18496     \n",
       "                                                                 \n",
-      " flatten (Flatten)           (None, 50176)             0         \n",
+      " max_pooling2d_3 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " 2D)                                                             \n",
       "                                                                 \n",
-      " dense (Dense)               (None, 64)                3211328   \n",
+      " conv2d_5 (Conv2D)           (None, 28, 28, 64)        36928     \n",
       "                                                                 \n",
-      " dense_1 (Dense)             (None, 1)                 65        \n",
+      " flatten_1 (Flatten)         (None, 50176)             0         \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 64)                3211328   \n",
+      "                                                                 \n",
+      " dense_3 (Dense)             (None, 4)                 260       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 3,267,713\n",
-      "Trainable params: 3,267,713\n",
+      "Total params: 3,267,908\n",
+      "Trainable params: 3,267,908\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "82/82 [==============================] - 17s 200ms/step - loss: 0.4581 - accuracy: 0.8418 - val_loss: 0.2755 - val_accuracy: 0.8668\n",
+      "82/82 [==============================] - 16s 167ms/step - loss: 1.0965 - accuracy: 0.5347 - val_loss: 0.8453 - val_accuracy: 0.6325\n",
       "Epoch 2/10\n",
-      "82/82 [==============================] - 14s 165ms/step - loss: 0.2600 - accuracy: 0.8418 - val_loss: 0.2183 - val_accuracy: 0.8668\n",
+      "82/82 [==============================] - 14s 169ms/step - loss: 0.6518 - accuracy: 0.7319 - val_loss: 0.6086 - val_accuracy: 0.7596\n",
       "Epoch 3/10\n",
-      "82/82 [==============================] - 19s 228ms/step - loss: 0.2080 - accuracy: 0.9046 - val_loss: 0.1750 - val_accuracy: 0.9265\n",
+      "82/82 [==============================] - 14s 175ms/step - loss: 0.3983 - accuracy: 0.8583 - val_loss: 0.5732 - val_accuracy: 0.7841\n",
       "Epoch 4/10\n",
-      "82/82 [==============================] - 18s 214ms/step - loss: 0.1459 - accuracy: 0.9360 - val_loss: 0.1530 - val_accuracy: 0.9449\n",
+      "82/82 [==============================] - 15s 182ms/step - loss: 0.2649 - accuracy: 0.9054 - val_loss: 0.3934 - val_accuracy: 0.8545\n",
       "Epoch 5/10\n",
-      "82/82 [==============================] - 16s 200ms/step - loss: 0.1028 - accuracy: 0.9590 - val_loss: 0.1612 - val_accuracy: 0.9296\n",
+      "82/82 [==============================] - 15s 182ms/step - loss: 0.1222 - accuracy: 0.9602 - val_loss: 0.4595 - val_accuracy: 0.8423\n",
       "Epoch 6/10\n",
-      "53/82 [==================>...........] - ETA: 4s - loss: 0.0647 - accuracy: 0.9794"
+      "82/82 [==============================] - 14s 173ms/step - loss: 0.0858 - accuracy: 0.9740 - val_loss: 0.4092 - val_accuracy: 0.8729\n",
+      "Epoch 7/10\n",
+      "82/82 [==============================] - 14s 174ms/step - loss: 0.0609 - accuracy: 0.9851 - val_loss: 0.4203 - val_accuracy: 0.8836\n",
+      "Epoch 8/10\n",
+      "82/82 [==============================] - 17s 209ms/step - loss: 0.0300 - accuracy: 0.9946 - val_loss: 0.4152 - val_accuracy: 0.8821\n",
+      "Epoch 9/10\n",
+      "82/82 [==============================] - 14s 173ms/step - loss: 0.0226 - accuracy: 0.9939 - val_loss: 0.4532 - val_accuracy: 0.8897\n",
+      "Epoch 10/10\n",
+      "82/82 [==============================] - 19s 233ms/step - loss: 0.0161 - accuracy: 0.9969 - val_loss: 0.3842 - val_accuracy: 0.9096\n"
      ]
     }
    ],
@@ -116,12 +124,12 @@
     "    # dense layers\n",
     "    layers.Flatten(),\n",
     "    layers.Dense(64, activation='relu'),\n",
-    "    layers.Dense(1, activation='sigmoid') \n",
+    "    layers.Dense(4, activation='softmax') \n",
     "])\n",
     "\n",
     "# Compile the model\n",
     "model.compile(optimizer='adam',\n",
-    "              loss='binary_crossentropy',\n",
+    "              loss='sparse_categorical_crossentropy',\n",
     "              metrics=['accuracy'])\n",
     "\n",
     "model.summary()\n",
@@ -140,9 +148,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21/21 - 1s - loss: 0.3842 - accuracy: 0.9096 - 1s/epoch - 53ms/step\n",
+      "Test Loss: 0.3841625452041626\n",
+      "Test Accuracy: 0.9096477627754211\n"
+     ]
+    }
+   ],
    "source": [
     "test_loss, test_accuracy = model.evaluate(X_test, y_test, verbose=2)\n",
     "\n",
