playing around with layers

--- a/notebook_multiclass_model.ipynb
+++ b/notebook_multiclass_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,60 +54,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential_7\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_3 (Conv2D)           (None, 126, 126, 32)      896       \n",
+      " conv2d_29 (Conv2D)          (None, 126, 126, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_2 (MaxPooling  (None, 63, 63, 32)       0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_21 (MaxPoolin  (None, 63, 63, 32)       0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_4 (Conv2D)           (None, 61, 61, 64)        18496     \n",
+      " conv2d_30 (Conv2D)          (None, 61, 61, 64)        18496     \n",
       "                                                                 \n",
-      " max_pooling2d_3 (MaxPooling  (None, 30, 30, 64)       0         \n",
-      " 2D)                                                             \n",
+      " max_pooling2d_22 (MaxPoolin  (None, 30, 30, 64)       0         \n",
+      " g2D)                                                            \n",
       "                                                                 \n",
-      " conv2d_5 (Conv2D)           (None, 28, 28, 64)        36928     \n",
+      " conv2d_31 (Conv2D)          (None, 28, 28, 64)        36928     \n",
       "                                                                 \n",
-      " flatten_1 (Flatten)         (None, 50176)             0         \n",
+      " flatten_7 (Flatten)         (None, 50176)             0         \n",
       "                                                                 \n",
-      " dense_2 (Dense)             (None, 64)                3211328   \n",
+      " dropout_6 (Dropout)         (None, 50176)             0         \n",
       "                                                                 \n",
-      " dense_3 (Dense)             (None, 4)                 260       \n",
+      " dense_15 (Dense)            (None, 64)                3211328   \n",
+      "                                                                 \n",
+      " batch_normalization_5 (Batc  (None, 64)               256       \n",
+      " hNormalization)                                                 \n",
+      "                                                                 \n",
+      " dense_16 (Dense)            (None, 4)                 260       \n",
       "                                                                 \n",
       "=================================================================\n",
-      "Total params: 3,267,908\n",
-      "Trainable params: 3,267,908\n",
-      "Non-trainable params: 0\n",
+      "Total params: 3,268,164\n",
+      "Trainable params: 3,268,036\n",
+      "Non-trainable params: 128\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "82/82 [==============================] - 16s 167ms/step - loss: 1.0965 - accuracy: 0.5347 - val_loss: 0.8453 - val_accuracy: 0.6325\n",
+      "82/82 [==============================] - 15s 162ms/step - loss: 0.9347 - accuracy: 0.6216 - val_loss: 0.9246 - val_accuracy: 0.6585\n",
       "Epoch 2/10\n",
-      "82/82 [==============================] - 14s 169ms/step - loss: 0.6518 - accuracy: 0.7319 - val_loss: 0.6086 - val_accuracy: 0.7596\n",
+      "82/82 [==============================] - 15s 180ms/step - loss: 0.6466 - accuracy: 0.7511 - val_loss: 0.6865 - val_accuracy: 0.7305\n",
       "Epoch 3/10\n",
-      "82/82 [==============================] - 14s 175ms/step - loss: 0.3983 - accuracy: 0.8583 - val_loss: 0.5732 - val_accuracy: 0.7841\n",
+      "82/82 [==============================] - 14s 175ms/step - loss: 0.4515 - accuracy: 0.8357 - val_loss: 0.6590 - val_accuracy: 0.7259\n",
       "Epoch 4/10\n",
-      "82/82 [==============================] - 15s 182ms/step - loss: 0.2649 - accuracy: 0.9054 - val_loss: 0.3934 - val_accuracy: 0.8545\n",
+      "82/82 [==============================] - 14s 177ms/step - loss: 0.3339 - accuracy: 0.8801 - val_loss: 0.4351 - val_accuracy: 0.8484\n",
       "Epoch 5/10\n",
-      "82/82 [==============================] - 15s 182ms/step - loss: 0.1222 - accuracy: 0.9602 - val_loss: 0.4595 - val_accuracy: 0.8423\n",
+      "82/82 [==============================] - 15s 177ms/step - loss: 0.2151 - accuracy: 0.9307 - val_loss: 0.3822 - val_accuracy: 0.8515\n",
       "Epoch 6/10\n",
-      "82/82 [==============================] - 14s 173ms/step - loss: 0.0858 - accuracy: 0.9740 - val_loss: 0.4092 - val_accuracy: 0.8729\n",
+      "82/82 [==============================] - 16s 190ms/step - loss: 0.1527 - accuracy: 0.9506 - val_loss: 0.3260 - val_accuracy: 0.8806\n",
       "Epoch 7/10\n",
-      "82/82 [==============================] - 14s 174ms/step - loss: 0.0609 - accuracy: 0.9851 - val_loss: 0.4203 - val_accuracy: 0.8836\n",
+      "82/82 [==============================] - 14s 169ms/step - loss: 0.1332 - accuracy: 0.9598 - val_loss: 0.3145 - val_accuracy: 0.8851\n",
       "Epoch 8/10\n",
-      "82/82 [==============================] - 17s 209ms/step - loss: 0.0300 - accuracy: 0.9946 - val_loss: 0.4152 - val_accuracy: 0.8821\n",
+      "82/82 [==============================] - 13s 163ms/step - loss: 0.1022 - accuracy: 0.9655 - val_loss: 0.3297 - val_accuracy: 0.8928\n",
       "Epoch 9/10\n",
-      "82/82 [==============================] - 14s 173ms/step - loss: 0.0226 - accuracy: 0.9939 - val_loss: 0.4532 - val_accuracy: 0.8897\n",
+      "82/82 [==============================] - 13s 164ms/step - loss: 0.0781 - accuracy: 0.9793 - val_loss: 0.2850 - val_accuracy: 0.9081\n",
       "Epoch 10/10\n",
-      "82/82 [==============================] - 19s 233ms/step - loss: 0.0161 - accuracy: 0.9969 - val_loss: 0.3842 - val_accuracy: 0.9096\n"
+      "82/82 [==============================] - 14s 166ms/step - loss: 0.0822 - accuracy: 0.9717 - val_loss: 0.3112 - val_accuracy: 0.9112\n"
      ]
     }
    ],
@@ -119,11 +124,13 @@
     "    layers.MaxPooling2D((2, 2)),\n",
     "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
     "    layers.MaxPooling2D((2, 2)),\n",
-    "    layers.Conv2D(64, (3, 3), activation='relu'),\n",
+    "    layers.Conv2D(64, (3, 3), activation='relu'), \n",
     "    \n",
     "    # dense layers\n",
     "    layers.Flatten(),\n",
+    "    layers.Dropout(0.5),\n",
     "    layers.Dense(64, activation='relu'),\n",
+    "    layers.BatchNormalization(),\n",
     "    layers.Dense(4, activation='softmax') \n",
     "])\n",
     "\n",
@@ -148,16 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21/21 - 1s - loss: 0.3842 - accuracy: 0.9096 - 1s/epoch - 53ms/step\n",
-      "Test Loss: 0.3841625452041626\n",
-      "Test Accuracy: 0.9096477627754211\n"
+      "21/21 - 1s - loss: 0.3112 - accuracy: 0.9112 - 763ms/epoch - 36ms/step\n",
+      "Test Loss: 0.311233788728714\n",
+      "Test Accuracy: 0.9111791849136353\n"
      ]
     }
    ],
