--- a/skull_stripping.ipynb
+++ b/skull_stripping.ipynb
@@ -539,7 +539,7 @@
     "\n",
     "# define and compile\n",
     "model = unet()\n",
-    "model.compile(optimizer='adam', loss=dice_loss, metrics=['accuracy']) #~loss can be set to : 'binary_crossentropy' or dice_loss\n",
+    "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy']) #~loss can be set to : 'binary_crossentropy' or dice_loss\n",
     "\n",
     "# train (fit)\n",
     "model.fit([images, image_template_masks_array], masks, batch_size=20, epochs=10, validation_split=0.1)\n"
