data augmentation + save model

--- a/notebook_initial_model.ipynb
+++ b/notebook_initial_model.ipynb
@@ -17,12 +17,13 @@
     "from tensorflow.keras import layers, models\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from skimage import morphology, filters, exposure, feature\n",
-    "from scipy import ndimage"
+    "from scipy import ndimage\n",
+    "from tensorflow.keras.preprocessing.image import ImageDataGenerator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +34,7 @@
     "categories = ['glioma_tumor', 'meningioma_tumor', 'no_tumor', 'pituitary_tumor']\n",
     "\n",
     "# labels\n",
-    "labels = {'glioma_tumor': 0, 'meningioma_tumor': 0, 'no_tumor': 1, 'pituitary_tumor': 0}\n",
+    "labels = {'glioma_tumor': 1, 'meningioma_tumor': 1, 'no_tumor': 0, 'pituitary_tumor': 1}\n",
     "\n",
     "# Lists to store the images and labels\n",
     "images = []\n",
@@ -59,41 +60,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(image_labels==0)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data augmentation\n",
+    "\n",
+    "non_tumorous_images = images[image_labels == 0]\n",
+    "\n",
+    "# define your data augmentation generator\n",
+    "data_gen = ImageDataGenerator(\n",
+    "    rotation_range=20,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    shear_range=0.2,\n",
+    "    zoom_range=0.2,\n",
+    "    horizontal_flip=False,\n",
+    "    fill_mode='nearest'\n",
+    ")\n",
+    "\n",
+    "# the .flow() method generates batches of augmented data\n",
+    "augmented_data = data_gen.flow(non_tumorous_images, batch_size=1)\n",
+    "\n",
+    "# generate 3 times the amount of non-tumorous images\n",
+    "augmented_images = []\n",
+    "augmented_labels = []\n",
+    "for i in range(len(non_tumorous_images) * 2): \n",
+    "    augmented_img = next(augmented_data)[0].astype('uint8')\n",
+    "    augmented_images.append(augmented_img)\n",
+    "    augmented_labels.append(0) \n",
+    "\n",
+    "# convert the lists \n",
+    "augmented_images = np.array(augmented_images)\n",
+    "augmented_labels = np.array(augmented_labels)\n",
+    "\n",
+    "# combine\n",
+    "images = np.concatenate((images, augmented_images), axis=0)\n",
+    "image_labels = np.concatenate((image_labels, augmented_labels), axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1500"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(image_labels==0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
-      " conv2d_9 (Conv2D)           (None, 126, 126, 32)      896       \n",
+      " conv2d_3 (Conv2D)           (None, 126, 126, 32)      896       \n",
       "                                                                 \n",
-      " max_pooling2d_6 (MaxPooling  (None, 63, 63, 32)       0         \n",
+      " max_pooling2d_2 (MaxPooling  (None, 63, 63, 32)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_10 (Conv2D)          (None, 61, 61, 64)        18496     \n",
+      " conv2d_4 (Conv2D)           (None, 61, 61, 64)        18496     \n",
       "                                                                 \n",
-      " max_pooling2d_7 (MaxPooling  (None, 30, 30, 64)       0         \n",
+      " max_pooling2d_3 (MaxPooling  (None, 30, 30, 64)       0         \n",
       " 2D)                                                             \n",
       "                                                                 \n",
-      " conv2d_11 (Conv2D)          (None, 28, 28, 64)        36928     \n",
+      " conv2d_5 (Conv2D)           (None, 28, 28, 64)        36928     \n",
       "                                                                 \n",
-      " flatten_3 (Flatten)         (None, 50176)             0         \n",
+      " flatten_1 (Flatten)         (None, 50176)             0         \n",
       "                                                                 \n",
-      " dense_6 (Dense)             (None, 64)                3211328   \n",
+      " dense_2 (Dense)             (None, 64)                3211328   \n",
       "                                                                 \n",
-      " dense_7 (Dense)             (None, 1)                 65        \n",
+      " dense_3 (Dense)             (None, 1)                 65        \n",
       "                                                                 \n",
       "=================================================================\n",
       "Total params: 3,267,713\n",
@@ -101,25 +176,25 @@
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "Epoch 1/10\n",
-      "82/82 [==============================] - 20s 231ms/step - loss: 0.3942 - accuracy: 0.8338 - val_loss: 0.2729 - val_accuracy: 0.8668\n",
+      "107/107 [==============================] - 20s 177ms/step - loss: 0.4331 - accuracy: 0.8109 - val_loss: 0.2375 - val_accuracy: 0.9109\n",
       "Epoch 2/10\n",
-      "82/82 [==============================] - 18s 216ms/step - loss: 0.2365 - accuracy: 0.8905 - val_loss: 0.1949 - val_accuracy: 0.9112\n",
+      "107/107 [==============================] - 18s 172ms/step - loss: 0.2067 - accuracy: 0.9217 - val_loss: 0.2275 - val_accuracy: 0.9039\n",
       "Epoch 3/10\n",
-      "82/82 [==============================] - 18s 214ms/step - loss: 0.1533 - accuracy: 0.9364 - val_loss: 0.1500 - val_accuracy: 0.9433\n",
+      "107/107 [==============================] - 18s 171ms/step - loss: 0.1367 - accuracy: 0.9457 - val_loss: 0.1787 - val_accuracy: 0.9226\n",
       "Epoch 4/10\n",
-      "82/82 [==============================] - 17s 212ms/step - loss: 0.0960 - accuracy: 0.9625 - val_loss: 0.1478 - val_accuracy: 0.9403\n",
+      "107/107 [==============================] - 18s 171ms/step - loss: 0.1090 - accuracy: 0.9616 - val_loss: 0.1532 - val_accuracy: 0.9531\n",
       "Epoch 5/10\n",
-      "82/82 [==============================] - 15s 182ms/step - loss: 0.0702 - accuracy: 0.9724 - val_loss: 0.1214 - val_accuracy: 0.9571\n",
+      "107/107 [==============================] - 20s 187ms/step - loss: 0.0658 - accuracy: 0.9762 - val_loss: 0.1543 - val_accuracy: 0.9566\n",
       "Epoch 6/10\n",
-      "82/82 [==============================] - 14s 176ms/step - loss: 0.0418 - accuracy: 0.9851 - val_loss: 0.1647 - val_accuracy: 0.9541\n",
+      "107/107 [==============================] - 21s 201ms/step - loss: 0.0324 - accuracy: 0.9883 - val_loss: 0.1816 - val_accuracy: 0.9566\n",
       "Epoch 7/10\n",
-      "82/82 [==============================] - 15s 186ms/step - loss: 0.0410 - accuracy: 0.9847 - val_loss: 0.1477 - val_accuracy: 0.9648\n",
+      "107/107 [==============================] - 20s 190ms/step - loss: 0.0143 - accuracy: 0.9950 - val_loss: 0.2203 - val_accuracy: 0.9555\n",
       "Epoch 8/10\n",
-      "82/82 [==============================] - 15s 179ms/step - loss: 0.0193 - accuracy: 0.9950 - val_loss: 0.1277 - val_accuracy: 0.9663\n",
+      "107/107 [==============================] - 20s 191ms/step - loss: 0.0183 - accuracy: 0.9935 - val_loss: 0.2455 - val_accuracy: 0.9578\n",
       "Epoch 9/10\n",
-      "82/82 [==============================] - 16s 197ms/step - loss: 0.0200 - accuracy: 0.9931 - val_loss: 0.1517 - val_accuracy: 0.9663\n",
+      "107/107 [==============================] - 21s 192ms/step - loss: 0.0078 - accuracy: 0.9977 - val_loss: 0.3279 - val_accuracy: 0.9531\n",
       "Epoch 10/10\n",
-      "82/82 [==============================] - 17s 202ms/step - loss: 0.0093 - accuracy: 0.9981 - val_loss: 0.1509 - val_accuracy: 0.9694\n"
+      "107/107 [==============================] - 20s 182ms/step - loss: 0.0247 - accuracy: 0.9912 - val_loss: 0.2426 - val_accuracy: 0.9367\n"
      ]
     }
    ],
@@ -159,16 +234,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21/21 - 1s - loss: 0.1509 - accuracy: 0.9694 - 1s/epoch - 57ms/step\n",
-      "Test Loss: 0.15085594356060028\n",
-      "Test Accuracy: 0.9693721532821655\n"
+      "27/27 - 1s - loss: 0.2426 - accuracy: 0.9367 - 1s/epoch - 39ms/step\n",
+      "Test Loss: 0.24264606833457947\n",
+      "Test Accuracy: 0.9366940259933472\n"
      ]
     }
    ],
@@ -188,9 +263,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21/21 [==============================] - 1s 35ms/step\n",
-      "[[488  78]\n",
-      " [  9  78]]\n"
+      "27/27 [==============================] - 1s 31ms/step\n",
+      "[[113 164]\n",
+      " [  0 576]]\n"
      ]
     }
    ],
@@ -204,6 +279,15 @@
     "\n",
     "# print\n",
     "print(cm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('model_binary.h5')"
    ]
   }
  ],
